add: impl of camera service and camera storage
